[gd_scene load_steps=2 format=3 uid="uid://c5npq1v0hctjx"]

[ext_resource type="Script" uid="uid://cvpuyr7hqjmf1" path="res://Command_GUI/command_gui.gd" id="1_c4hto"]

[node name="Command_GUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_c4hto")

[node name="Move_Up" type="Button" parent="."]
layout_mode = 2
offset_right = 20.0
offset_bottom = 40.0
text = "U"

[node name="Move_Down" type="Button" parent="."]
layout_mode = 2
offset_left = 24.0
offset_right = 44.0
offset_bottom = 40.0
text = "D"

[node name="Move_Left" type="Button" parent="."]
layout_mode = 2
offset_left = 48.0
offset_right = 65.0
offset_bottom = 40.0
text = "L"

[node name="Move_Right" type="Button" parent="."]
layout_mode = 2
offset_left = 69.0
offset_right = 88.0
offset_bottom = 40.0
text = "R
"

[node name="Action_Speak" type="Button" parent="."]
layout_mode = 2
offset_left = 92.0
offset_right = 109.0
offset_bottom = 40.0
text = "S"

[node name="Action_Interact" type="Button" parent="."]
layout_mode = 2
offset_left = 113.0
offset_right = 126.0
offset_bottom = 40.0
text = "I"

[node name="Action_Attack" type="Button" parent="."]
layout_mode = 2
offset_left = 130.0
offset_right = 149.0
offset_bottom = 40.0
text = "A
"
